Removed Nucleus CSS rule `.g-block.visible-desktop {}` that was overriding the media queries (fixes #1344)

--- a/engines/common/nucleus/css-compiled/nucleus.css
+++ b/engines/common/nucleus/css-compiled/nucleus.css
@@ -2016,10 +2016,6 @@ input[type="submit"] {
   display: inherit !important;
 }
 
-.g-block.visible-desktop {
-  display: block !important;
-}
-
 @media print {
   .visible-print {
     display: inherit !important;
