--- a/engines/common/nucleus/scss/nucleus/_utilities.scss
+++ b/engines/common/nucleus/scss/nucleus/_utilities.scss
@@ -123,10 +123,6 @@
   	display: inherit !important;
 }
 
-.g-block.visible-desktop {
-    display: block !important;
-}
-
 @media print {
 	.visible-print {
 	   display: inherit !important;
